OneOf类校验器